Implement functional Stripe donation system
- Add Stripe JavaScript SDK to frontend
- Create Stripe payment processing backend route
- Update donation modal to use real Stripe Checkout
- Add payment success/cancel URL handling
- Include Stripe dependency in server package.json
- Configure CSP for Stripe domains
- Implement secure payment flow with test keys

--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "express-validator": "^7.0.1",
     "firebase": "^10.7.1",
     "firebase-admin": "^11.11.1",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "stripe": "^14.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
