--- a/server/env.example
+++ b/server/env.example
@@ -21,3 +21,8 @@ FRONTEND_URL=http://localhost:3000
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
